Minor nits: * Use WebRoot() correctly * Spacing between the bottom of the header and the content

--- a/css/master.css
+++ b/css/master.css
@@ -5,6 +5,7 @@ body {
 
 #header {
   background-color: lightgray;
+  margin-bottom: 10px;
 }
 
 #userinfo {
